--- a/app/src/main/res/xml/accessibility_service_config.xml
+++ b/app/src/main/res/xml/accessibility_service_config.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <accessibility-service
-        android:description="This is an accessibility service"
-        android:accessibilityEventTypes="typeViewTextChanged"
-        android:accessibilityFlags="flagDefault"
-        android:accessibilityFeedbackType="feedbackSpoken"
-        android:notificationTimeout="100"
-        android:canRetrieveWindowContent="true"
-        android:settingsActivity=""/>
-</PreferenceScreen>
+<accessibility-service xmlns:android="http://schemas.android.com/apk/res/android"
+    android:accessibilityEventTypes="typeViewTextChanged"
+    android:accessibilityFlags="flagDefault"
+    android:accessibilityFeedbackType="feedbackSpoken"
+    android:notificationTimeout="100"
+    android:canRetrieveWindowContent="true" />
