--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.365" />
+        app:layout_constraintVertical_bias="0.406" />
 
     <TextView
         android:id="@+id/FitbitLoginPrompt"
@@ -84,6 +84,44 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/arrowLeft"
+        android:layout_width="35dp"
+        android:layout_height="33dp"
+        android:padding="5dp"
+        app:layout_constraintBottom_toBottomOf="@+id/CurrentDateTextView"
+        app:layout_constraintEnd_toStartOf="@+id/CurrentDateTextView"
+        app:layout_constraintTop_toTopOf="@+id/CurrentDateTextView"
+        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24" />
+
+    <ImageView
+        android:id="@+id/arrowRight"
+        android:layout_width="35dp"
+        android:layout_height="33dp"
+        android:padding="5dp"
+        app:layout_constraintBottom_toBottomOf="@+id/CurrentDateTextView"
+        app:layout_constraintStart_toEndOf="@+id/CurrentDateTextView"
+        app:layout_constraintTop_toTopOf="@+id/CurrentDateTextView"
+        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
+
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottomNav" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNav"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:scrollIndicators="left"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/nav_menu" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
