--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,142 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="210dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="132dp"
-        android:layout_marginTop="340dp"
-        android:layout_marginEnd="132dp"
-        android:text="Test writing something below"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="101dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:minHeight="48dp"
-        android:text="Name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <Button
-        android:id="@+id/FitbitBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="139dp"
-        android:layout_marginEnd="140dp"
-        android:layout_marginBottom="60dp"
-        android:backgroundTint="#66469E"
-        android:text="Fitbit Login"
-        app:cornerRadius="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/CurrentDateTextView"
-        android:layout_width="177dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="117dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="117dp"
-        android:layout_marginBottom="20dp"
-        android:padding="10dp"
-        android:text="DATE HERE"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/FitbitLoginPrompt"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.406" />
-
-    <TextView
-        android:id="@+id/FitbitLoginPrompt"
-        android:layout_width="230dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginEnd="91dp"
-        android:layout_marginBottom="20dp"
-        android:text="To view the full data, you need to log in to your Fitbit account"
-        android:textAlignment="center"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/FitbitBtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:id="@+id/arrowLeft"
-        android:layout_width="35dp"
-        android:layout_height="33dp"
-        android:padding="5dp"
-        app:layout_constraintBottom_toBottomOf="@+id/CurrentDateTextView"
-        app:layout_constraintEnd_toStartOf="@+id/CurrentDateTextView"
-        app:layout_constraintTop_toTopOf="@+id/CurrentDateTextView"
-        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24" />
-
-    <ImageView
-        android:id="@+id/arrowRight"
-        android:layout_width="35dp"
-        android:layout_height="33dp"
-        android:padding="5dp"
-        app:layout_constraintBottom_toBottomOf="@+id/CurrentDateTextView"
-        app:layout_constraintStart_toEndOf="@+id/CurrentDateTextView"
-        app:layout_constraintTop_toTopOf="@+id/CurrentDateTextView"
-        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
-
-    <!--
-    <FrameLayout
-        android:id="@+id/container"
+    <androidx.fragment.app.FragmentContainerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottomNav" />-->
-    <fragment
-        android:id="@+id/nav_fragment"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottomNav"
+        android:id="@+id/container"
+        android:layout_above="@id/bottomNav">
+    </androidx.fragment.app.FragmentContainerView>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/nav_menu"
+        android:scrollIndicators="left"/>
+
+    <!--<fragment
+        android:id="@+id/nav_host_fragment"
+        app:navGraph="@navigation/nav_graph"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/bottomNav"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:navGraph="@navigation/nav_graph"></fragment>
+        android:layout_below="@id/container" />-->
 
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNav"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:scrollIndicators="left"
-        android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/nav_menu" />
-
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
