--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".ui.menu.ChartFragment"
     android:layout_margin="10dp"
-    android:paddingTop="10dp">
+    android:paddingTop="10dp"
+    android:id="@+id/chartFragmentView">
 
 
     <TextView
@@ -46,8 +47,104 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textViewDateChartFragment"/>
+        android:layout_height="250dp"
+        android:layout_margin="20dp"
+        app:cardCornerRadius="17dp"
+        app:cardPreventCornerOverlap="true"
+        android:layout_below="@id/textViewDateChartFragment"
+        app:cardBackgroundColor="@color/cardview_light_background"
+        android:id="@+id/KeyboardDataCard">
 
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="10dp">
+
+            <TableRow>
+
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_black"
+                    android:padding="10dp"
+                    android:text="Typing stats"
+                    android:textSize="22sp" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_column="0"
+                    android:layout_weight="1"
+                    android:text="Speed (avg)"
+                    android:textSize="18sp"
+                    android:textAlignment="center"/>
+
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"
+                    android:layout_weight="1"
+                    android:text="Accuracy"
+                    android:textSize="18sp"
+                    android:textAlignment="center"/>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/speedData"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_column="0"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:text="1.2s"
+                    android:textAlignment="center"
+                    android:textSize="25dp"
+                    />
+
+                <RelativeLayout
+                    android:layout_height="match_parent"
+                    android:layout_width="200dp"
+                    android:layout_column="1">
+                    <ProgressBar
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:id="@+id/progressCircular"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:indeterminate="false"
+                        android:max="100"
+                        android:progress="80"
+                        android:progressDrawable="@drawable/circle_progress_background"
+                        android:rotation="-90"
+                        tools:ignore="SpeakableTextPresentCheck,DuplicateClickableBoundsCheck" />
+
+                    <TextView
+                        android:id="@+id/ProgressTextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="70%"
+                        android:textSize="24sp"
+                        android:gravity="center" />
+
+                </RelativeLayout>
+            </TableRow>
+
+
+        </TableLayout>
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
