--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/bottomNav"
         android:id="@+id/container"
-        android:layout_above="@id/bottomNav">
+        android:layout_above="@id/bottomNav"
+        tools:layout="@layout/fragment_home">
     </androidx.fragment.app.FragmentContainerView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -27,16 +28,8 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/nav_menu"
+        android:background="@color/dark_purple"
         android:scrollIndicators="left"/>
-
-    <!--<fragment
-        android:id="@+id/nav_host_fragment"
-        app:navGraph="@navigation/nav_graph"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:defaultNavHost="true"
-        android:layout_below="@id/container" />-->
 
 
 </RelativeLayout>
