--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -1,150 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.menu.ChartFragment"
-    android:layout_margin="10dp"
-    android:paddingTop="10dp"
-    android:id="@+id/chartFragmentView">
+    android:padding="10dp"
+    android:orientation="vertical"
+    android:id="@+id/chartFragmentView"
+    android:background="@color/dark_purple">
 
-
-    <TextView
-        android:id="@+id/textViewDateChartFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="date"
-        android:padding="5dp"
-        android:gravity="center_horizontal"
-        android:textSize="24sp" />
-
-    <ImageView
-        android:id="@+id/leftArrow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_toStartOf="@id/textViewDateChartFragment"
-        android:padding="5dp"
-        android:src="@drawable/ic_baseline_arrow_back_ios_new_24" />
-
-    <ImageView
-        android:id="@+id/rightArrow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_toEndOf="@id/textViewDateChartFragment"
-        android:padding="5dp"
-        android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
-
-
-    <androidx.cardview.widget.CardView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:layout_margin="20dp"
-        app:cardCornerRadius="17dp"
-        app:cardPreventCornerOverlap="true"
-        android:layout_below="@id/textViewDateChartFragment"
-        app:cardBackgroundColor="@color/cardview_light_background"
-        android:id="@+id/KeyboardDataCard">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:paddingTop="20dp"
+        android:paddingBottom="5dp">
+        <TextView
+            android:id="@+id/textViewDateChartFragment"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="date"
+            android:padding="5dp"
+            android:gravity="center_horizontal"
+            android:textSize="22sp"
+            android:fontFamily="@font/roboto_black"/>
 
-        <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="10dp">
+        <ImageView
+            android:id="@+id/leftArrow"
+            app:tint="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_toStartOf="@id/textViewDateChartFragment"
+            android:padding="5dp"
+            android:src="@drawable/ic_baseline_arrow_back_ios_new_24" />
 
-            <TableRow>
+        <ImageView
+            android:id="@+id/rightArrow"
+            app:tint="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_toEndOf="@id/textViewDateChartFragment"
+            android:padding="5dp"
+            android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
+    </RelativeLayout>
 
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/roboto_black"
-                    android:padding="10dp"
-                    android:text="Typing stats"
-                    android:textSize="22sp" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-
-                <TextView
-                    android:id="@+id/textView6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_column="0"
-                    android:layout_weight="1"
-                    android:text="Speed (avg)"
-                    android:textSize="18sp"
-                    android:textAlignment="center"/>
-
-                <TextView
-                    android:id="@+id/textView9"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_column="1"
-                    android:layout_weight="1"
-                    android:text="Accuracy"
-                    android:textSize="18sp"
-                    android:textAlignment="center"/>
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <TextView
-                    android:id="@+id/speedData"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_column="0"
-                    android:gravity="center"
-                    android:layout_weight="1"
-                    android:text="1.2s"
-                    android:textAlignment="center"
-                    android:textSize="25dp"
-                    />
-
-                <RelativeLayout
-                    android:layout_height="match_parent"
-                    android:layout_width="200dp"
-                    android:layout_column="1">
-                    <ProgressBar
-                        style="?android:attr/progressBarStyleHorizontal"
-                        android:id="@+id/progressCircular"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:indeterminate="false"
-                        android:max="100"
-                        android:progress="80"
-                        android:progressDrawable="@drawable/circle_progress_background"
-                        android:rotation="-90"
-                        tools:ignore="SpeakableTextPresentCheck,DuplicateClickableBoundsCheck" />
-
-                    <TextView
-                        android:id="@+id/ProgressTextView"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="70%"
-                        android:textSize="24sp"
-                        android:gravity="center" />
-
-                </RelativeLayout>
-            </TableRow>
+    <include layout="@layout/keyboard_chart_card"
+        android:id="@+id/keyboardChart"
+        android:layout_width="match_parent"
+        android:layout_height="300dp" />
 
 
-        </TableLayout>
-    </androidx.cardview.widget.CardView>
 
-</RelativeLayout>
+
+</LinearLayout>
