--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,123 +5,79 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.menu.HomeFragment"
-    android:id="@+id/homeFragment">
+    android:id="@+id/homeFragment"
+    android:background="@color/dark_purple"
+    android:shadowColor="@color/cardview_shadow_end_color"
+    android:shadowDx="0"
+    android:shadowDy="30"
+    android:shadowRadius="50">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="210dp"
-            android:layout_height="33dp"
-            android:layout_marginStart="132dp"
-            android:layout_marginTop="340dp"
-            android:layout_marginEnd="132dp"
-            android:text="Test writing something below"
-            android:textAlignment="center"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.507"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-            android:id="@+id/editTextTextPersonName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="100dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="101dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:minHeight="48dp"
-            android:text="Name"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-        <Button
-            android:id="@+id/FitbitBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="139dp"
-            android:layout_marginEnd="140dp"
-            android:layout_marginBottom="60dp"
-            android:backgroundTint="#66469E"
-            android:text="Fitbit Login"
-            app:cornerRadius="15dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/CurrentDateTextView"
-            android:layout_width="177dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="117dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="117dp"
-            android:layout_marginBottom="20dp"
-            android:padding="10dp"
-            android:text="DATE HERE"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/FitbitLoginPrompt"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.406" />
-
-        <TextView
-            android:id="@+id/FitbitLoginPrompt"
-            android:layout_width="230dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="90dp"
-            android:layout_marginEnd="91dp"
-            android:layout_marginBottom="20dp"
-            android:text="To view the full data, you need to log in to your Fitbit account"
-            android:textAlignment="center"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/FitbitBtn"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <ImageView
-            android:id="@+id/arrowLeft"
-            android:layout_width="35dp"
-            android:layout_height="33dp"
-            android:padding="5dp"
-            app:layout_constraintBottom_toBottomOf="@+id/CurrentDateTextView"
-            app:layout_constraintEnd_toStartOf="@+id/CurrentDateTextView"
-            app:layout_constraintTop_toTopOf="@+id/CurrentDateTextView"
-            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24" />
-
-        <ImageView
-            android:id="@+id/arrowRight"
-            android:layout_width="35dp"
-            android:layout_height="33dp"
-            android:padding="5dp"
-            app:layout_constraintBottom_toBottomOf="@+id/CurrentDateTextView"
-            app:layout_constraintStart_toEndOf="@+id/CurrentDateTextView"
-            app:layout_constraintTop_toTopOf="@+id/CurrentDateTextView"
-            app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
-
-        <com.github.mikephil.charting.charts.HorizontalBarChart
-            android:id="@+id/barChart"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintVertical_bias="0.817"
-            app:layout_constraintTop_toBottomOf="@id/editTextTextPersonName">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:paddingTop="20dp"
+            android:paddingBottom="5dp">
 
-        </com.github.mikephil.charting.charts.HorizontalBarChart>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageView
+                android:id="@+id/arrowLeft"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:padding="5dp"
+                android:layout_alignBottom="@id/currentDateTextView"
+                android:layout_toStartOf="@id/currentDateTextView"
+                app:tint="@color/light_grey"
+                app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24" />
+
+            <TextView
+                android:id="@+id/currentDateTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="date"
+                android:gravity="center_horizontal"
+                android:textColor="@color/white"
+                android:textSize="22sp"
+                android:padding="10dp"
+                android:layout_centerHorizontal="true"
+                android:fontFamily="@font/roboto_black"/>
+
+            <ImageView
+                android:id="@+id/arrowRight"
+                app:tint="@color/light_grey"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_toEndOf="@id/currentDateTextView"
+                android:padding="5dp"
+                android:layout_alignBottom="@id/currentDateTextView"
+                app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
+
+        </RelativeLayout>
+
+        <include layout="@layout/keyboard_data_card"
+            android:id="@+id/keyboardChart"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Weekly sleep"
+            android:textColor="@color/white"
+            android:fontFamily="@font/roboto_black"
+            android:textSize="22sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="35dp"/>
+
+        <include layout="@layout/sleep_data_card"
+            android:id="@+id/sleepDataContainer"/>
+
+
+    </LinearLayout>
 
 </FrameLayout>
