--- a/app/src/main/res/layout/keyboard_data_card.xml
+++ b/app/src/main/res/layout/keyboard_data_card.xml
@@ -3,15 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
-    android:layout_margin="20dp"
-    app:cardCornerRadius="17dp"
-    app:cardBackgroundColor="@color/cardview_light_background"
-    android:id="@+id/KeyboardDataCard">
+    android:layout_height="250dp"
+    app:cardCornerRadius="30dp"
+    app:cardPreventCornerOverlap="true"
+    app:cardElevation="2dp"
+    android:clipChildren="false"
+    android:layout_margin="5dp"
+    android:clipToPadding="false"
+    app:cardUseCompatPadding="true"
+    app:cardBackgroundColor="@color/light_purple">
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="10dp">
 
@@ -24,14 +28,15 @@
                 android:fontFamily="@font/roboto_black"
                 android:padding="10dp"
                 android:text="Typing stats"
+                android:textColor="@color/white"
                 android:textSize="22sp" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
-
+            android:orientation="horizontal"
+            android:layout_marginVertical="10dp">
 
             <TextView
                 android:id="@+id/textView6"
@@ -40,8 +45,9 @@
                 android:layout_column="0"
                 android:layout_weight="1"
                 android:text="Speed (avg)"
-                android:textSize="18sp"
-                android:textAlignment="center"/>
+                android:textAlignment="center"
+                android:textColor="@color/light_grey"
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/textView9"
@@ -50,28 +56,32 @@
                 android:layout_column="1"
                 android:layout_weight="1"
                 android:text="Accuracy"
-                android:textSize="18sp"
-                android:textAlignment="center"/>
+                android:textAlignment="center"
+                android:textColor="@color/light_grey"
+                android:textSize="18sp" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/speedData"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_column="0"
                 android:layout_weight="1"
-                android:textSize="25dp"
+                android:gravity="center"
                 android:text="1.2s"
-                android:layout_gravity="center"/>
+                android:textColor="@color/white"
+
+                android:textSize="25dp" />
 
             <RelativeLayout
-                android:layout_height="200dp"
-                android:layout_width="200dp">
+                android:layout_height="match_parent"
+                android:layout_width="200dp"
+                android:layout_column="1">
             <ProgressBar
                 style="?android:attr/progressBarStyleHorizontal"
                 android:id="@+id/progress_circular"
@@ -86,9 +96,10 @@
 
                 <TextView
                     android:id="@+id/ProgressTextView"
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:text="70%"
+                    android:textColor="@color/white"
                     android:textSize="24sp"
                     android:gravity="center" />
 
