--- a/app/src/main/res/layout/sleep_data_card.xml
+++ b/app/src/main/res/layout/sleep_data_card.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="280dp"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="@color/transparent"
@@ -45,7 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:padding="2dp"
-            android:visibility="gone">
+            android:visibility="visible">
         </com.github.mikephil.charting.charts.LineChart>
     </LinearLayout>
 
