--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -10,50 +10,8 @@
     android:id="@+id/chartFragmentView"
     android:background="@color/dark_purple">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:paddingTop="20dp"
-        android:paddingBottom="5dp">
-        <TextView
-            android:id="@+id/textViewDateChartFragment"
-            android:textColor="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="date"
-            android:padding="5dp"
-            android:gravity="center_horizontal"
-            android:textSize="22sp"
-            android:fontFamily="@font/roboto_black"/>
-
-        <ImageView
-            android:id="@+id/leftArrow"
-            app:tint="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_toStartOf="@id/textViewDateChartFragment"
-            android:padding="5dp"
-            android:src="@drawable/ic_baseline_arrow_back_ios_new_24" />
-
-        <ImageView
-            android:id="@+id/rightArrow"
-            app:tint="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_toEndOf="@id/textViewDateChartFragment"
-            android:padding="5dp"
-            android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
-    </RelativeLayout>
+    <include layout="@layout/fragment_date"
+        android:id="@+id/chartDatePicker"/>
 
     <include layout="@layout/keyboard_chart_card"
         android:id="@+id/keyboardChart"
