--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -1,28 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.onboarding.FirstFragment">
+    android:orientation="vertical"
+    android:layout_margin="10dp"
+    tools:context=".ui.onboarding.FirstFragment"
+    android:background="@color/dark_purple">
 
     <TextView
         android:id="@+id/textview_first"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_first_fragment"
-        app:layout_constraintBottom_toTopOf="@id/button_first"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/user_info_title"
+        android:layout_gravity="center"
+        android:padding="30dp"
+        android:textSize="24sp"
+        android:fontFamily="@font/roboto_black"
+        android:textColor="@color/white"/>
+
+    <TextView
+        android:id="@+id/textview_second"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/user_info_intro"
+        android:layout_gravity="center"
+        android:textAlignment="center"
+        android:margin="20dp"
+        android:padding="20dp"
+        android:textSize="22sp"
+        android:textColor="@color/white"/>
+
+
+    <EditText
+        android:id="@+id/userFullName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="Full name"
+        android:background="@drawable/roundstyle"
+        android:backgroundTint="@color/white"
+        android:padding="8dp"
+        android:layout_marginVertical="40dp"
+        android:layout_marginHorizontal="50dp"/>
+
+    <EditText
+        android:id="@+id/userEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textEmailAddress"
+        android:hint="Email"
+        android:background="@drawable/roundstyle"
+        android:backgroundTint="@color/white"
+        android:padding="8dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="50dp"/>
+
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/save_user_info_consent"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:layout_marginVertical="20dp"
+        android:padding="20dp"
+        android:textAlignment="center" />
 
     <Button
         android:id="@+id/button_first"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/next"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview_first" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="50dp"
+        android:text="@string/save_user_info"
+        android:layout_gravity="center"
+        android:textSize="22sp"
+        android:background="@drawable/roundstyle"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/light_purple"
+        android:paddingHorizontal="20dp"
+        android:layout_marginVertical="20dp"/>
+</LinearLayout>
