--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_margin="10dp"
-    tools:context=".ui.onboarding.FirstFragment"
+    tools:context=".ui.onboarding.UserInfoFragment"
     android:background="@color/dark_purple">
 
     <TextView
@@ -27,7 +27,7 @@
         android:text="@string/user_info_intro"
         android:layout_gravity="center"
         android:textAlignment="center"
-        android:margin="20dp"
+        android:layout_margin="5dp"
         android:padding="20dp"
         android:textSize="22sp"
         android:textColor="@color/white"/>
@@ -37,27 +37,42 @@
         android:id="@+id/userFullName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Full name"
+        android:layout_marginHorizontal="50dp"
+        android:layout_marginBottom="40dp"
         android:background="@drawable/roundstyle"
         android:backgroundTint="@color/white"
-        android:padding="8dp"
-        android:layout_marginVertical="40dp"
-        android:layout_marginHorizontal="50dp"/>
+        android:ems="10"
+        android:hint="Full name"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
+        android:padding="8dp" />
 
     <EditText
         android:id="@+id/userEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        android:hint="Email"
+        android:layout_marginHorizontal="50dp"
         android:background="@drawable/roundstyle"
         android:backgroundTint="@color/white"
-        android:padding="8dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="50dp"/>
+        android:ems="10"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:minHeight="48dp"
+        android:padding="8dp" />
+
+    <EditText
+        android:id="@+id/participantId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="50dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/roundstyle"
+        android:backgroundTint="@color/white"
+        android:ems="10"
+        android:hint="Your participant id"
+        android:inputType="text"
+        android:minHeight="48dp"
+        android:padding="8dp" />
 
     <TextView
         android:id="@+id/textView14"
@@ -65,13 +80,12 @@
         android:layout_height="wrap_content"
         android:text="@string/save_user_info_consent"
         android:textColor="@color/white"
-        android:textSize="20sp"
-        android:layout_marginVertical="20dp"
+        android:textSize="18sp"
         android:padding="20dp"
         android:textAlignment="center" />
 
     <Button
-        android:id="@+id/button_first"
+        android:id="@+id/saveUserInfo"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:text="@string/save_user_info"
