--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/content"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:theme="@style/Theme.Testing">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_home_24"
+            android:layout_gravity="center"
+            android:padding="20dp"/>
 
         <TextView
             android:id="@+id/onboarding_title"
@@ -18,7 +27,7 @@
             android:padding="20dp"
             android:fontFamily="@font/roboto_black"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/design_default_color_on_primary"
             android:textSize="22sp" />
 
         <TextView
@@ -29,7 +38,7 @@
             android:layout_marginTop="11dp"
             android:justificationMode="inter_word"
             android:padding="20dp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="14sp" />
 
 
