Preference screen added, transitioning to viewmodels

--- a/app/src/main/res/drawable/circle_progress_foreground.xml
+++ b/app/src/main/res/drawable/circle_progress_foreground.xml
@@ -7,7 +7,7 @@
             android:thickness="7dp">
 
             <gradient
-                android:startColor="@color/light_grey"
+                android:startColor="@color/cardview_light_background"
                 android:endColor="@color/cardview_shadow_start_color"
                 android:type="sweep"/>
         </shape>
