--- a/app/src/main/res/layout/keyboard_data_card.xml
+++ b/app/src/main/res/layout/keyboard_data_card.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="270dp"
     app:cardCornerRadius="30dp"
     app:cardPreventCornerOverlap="true"
     app:cardElevation="2dp"
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:padding="20dp">
 
         <TableRow>
 
@@ -36,27 +36,26 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:layout_marginVertical="10dp">
+            android:padding="3dp"
+            android:layout_marginVertical="5dp">
 
             <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
                 android:layout_weight="1"
-                android:text="Speed (avg)"
+                android:text="@string/speed_avg"
                 android:textAlignment="center"
                 android:textColor="@color/light_grey"
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/textView9"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_column="1"
-                android:layout_weight="1"
-                android:text="Accuracy"
+                android:text="@string/accuracy"
                 android:textAlignment="center"
+                android:layout_marginRight="15dp"
                 android:textColor="@color/light_grey"
                 android:textSize="18sp" />
         </TableRow>
@@ -64,23 +63,53 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:padding="3dp">
 
-            <TextView
-                android:id="@+id/speedData"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_column="0"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="1.2s"
-                android:textColor="@color/white"
+                android:layout_margin="5dp"
+                android:layout_weight="1">
 
-                android:textSize="25dp" />
+                <ImageView
+                    android:id="@+id/speedImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10dp"
+                    android:src="@drawable/speed_64" />
+
+                <TextView
+                    android:id="@+id/speedData"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_column="0"
+                    android:layout_alignBottom="@id/speedImage"
+                    android:layout_toRightOf="@id/speedImage"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
+                    android:paddingBottom="20dp"
+                    android:text="1.2s"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:fontFamily="@font/roboto_black"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/speedData"
+                    android:layout_marginTop="7dp"
+                    android:fontFamily="@font/roboto"
+                    android:text="You were faster than last week!"
+                    android:textAlignment="center"
+                    android:gravity="center"
+                    android:textColor="@color/light_grey"
+                    android:textSize="13sp" />
+            </RelativeLayout>
 
             <RelativeLayout
                 android:layout_height="match_parent"
-                android:layout_width="200dp"
+                android:layout_width="160dp"
                 android:layout_column="1">
             <ProgressBar
                 style="?android:attr/progressBarStyleHorizontal"
@@ -101,7 +130,8 @@
                     android:text="70%"
                     android:textColor="@color/white"
                     android:textSize="24sp"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    android:fontFamily="@font/roboto_black"/>
 
             </RelativeLayout>
 
