--- a/app/src/main/res/layout/keyboard_data_card.xml
+++ b/app/src/main/res/layout/keyboard_data_card.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:paddingHorizontal="20dp">
 
         <TableRow>
 
@@ -36,14 +36,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:padding="3dp"
-            android:layout_marginVertical="5dp">
+            android:padding="3dp">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
-                android:layout_weight="1"
+                android:layout_weight="0"
                 android:text="@string/speed_avg"
                 android:textAlignment="center"
                 android:textColor="@color/light_grey"
@@ -53,9 +52,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_column="1"
+                android:layout_weight="1"
                 android:text="@string/accuracy"
                 android:textAlignment="center"
-                android:layout_marginRight="15dp"
+                android:layout_marginRight="20dp"
                 android:textColor="@color/light_grey"
                 android:textSize="18sp" />
         </TableRow>
@@ -69,13 +69,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_column="0"
-                android:layout_margin="5dp"
+                android:paddingTop="10dp"
                 android:layout_weight="1">
 
                 <ImageView
                     android:id="@+id/speedImage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="55dp"
+                    android:layout_height="54dp"
                     android:paddingLeft="10dp"
                     android:src="@drawable/speed_64" />
 
@@ -84,12 +84,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_column="0"
-                    android:layout_alignBottom="@id/speedImage"
                     android:layout_toRightOf="@id/speedImage"
                     android:layout_weight="1"
-                    android:gravity="center_horizontal"
-                    android:paddingBottom="20dp"
+                    android:layout_alignBottom="@id/speedImage"
+                    android:gravity="center"
                     android:text="1.2s"
+                    android:layout_marginVertical="10dp"
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     android:fontFamily="@font/roboto_black"/>
@@ -97,20 +97,23 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/speedData"
-                    android:layout_marginTop="7dp"
+                    android:layout_below="@id/speedImage"
+                    android:layout_marginTop="15dp"
                     android:fontFamily="@font/roboto"
                     android:text="You were faster than last week!"
                     android:textAlignment="center"
                     android:gravity="center"
+                    android:lines="2"
                     android:textColor="@color/light_grey"
-                    android:textSize="13sp" />
+                    android:textSize="14sp" />
             </RelativeLayout>
 
             <RelativeLayout
                 android:layout_height="match_parent"
-                android:layout_width="160dp"
-                android:layout_column="1">
+                android:layout_width="match_parent"
+                android:layout_column="1"
+                android:layout_weight="1"
+                android:paddingBottom="20dp">
             <ProgressBar
                 style="?android:attr/progressBarStyleHorizontal"
                 android:id="@+id/progress_circular"
@@ -119,6 +122,7 @@
                 android:indeterminate="false"
                 android:max="100"
                 android:progress="80"
+                android:gravity="center_horizontal"
                 android:progressDrawable="@drawable/circle_progress_background"
                 android:rotation="-90"
                 tools:ignore="SpeakableTextPresentCheck,DuplicateClickableBoundsCheck" />
@@ -132,6 +136,12 @@
                     android:textSize="24sp"
                     android:gravity="center"
                     android:fontFamily="@font/roboto_black"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@id/progress_circular"
+                    android:text=""/>
 
             </RelativeLayout>
 
