--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -8,7 +8,7 @@
     android:padding="10dp"
     android:orientation="vertical"
     android:id="@+id/chartFragmentView"
-    android:background="@color/dark_purple">
+    android:background="@color/white">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/dateContainer"
@@ -17,19 +17,93 @@
         android:layout_alignParentTop="true"
         tools:layout="@layout/fragment_date" />
 
-    <include layout="@layout/keyboard_chart_card"
-        android:id="@+id/keyboardChart"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="300dp" />
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/sleepDataChart"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:padding="2dp"
-        android:visibility="visible">
-    </com.github.mikephil.charting.charts.LineChart>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="5dp">
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="320dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:backgroundTint="@color/white">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingHorizontal="10dp"
+                    android:text="Switch to writing speed"
+                    android:textColor="@color/white"
+                    android:backgroundTint="@color/light_purple"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_gravity="right"
+                    android:textSize="10sp">
+
+                </Button>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Errors made during a timewindow"
+                    android:textSize="15sp"
+                    android:layout_gravity="left"
+                    android:padding="10dp"
+                    android:fontFamily="@font/roboto_black"
+                    android:textColor="@color/dark_purple" />
+
+
+
+                <com.github.mikephil.charting.charts.BarChart
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="20dp"
+                    android:id="@+id/barChart1"/>
+
+            </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="300dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:backgroundTint="@color/white">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Words typed during a timewindow"
+                android:textSize="15sp"
+                android:fontFamily="@font/roboto_black"
+                android:layout_gravity="left"
+                android:padding="10dp"
+                android:textColor="@color/dark_purple" />
+
+            <com.github.mikephil.charting.charts.BarChart
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="2dp"
+                android:id="@+id/barChart2"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+
+</ScrollView>
 
 
 
