--- a/app/src/main/res/layout/fragment_date.xml
+++ b/app/src/main/res/layout/fragment_date.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="100dp"
     tools:context=".ui.menu.DateFragment"
-    android:background="@color/dark_purple">
+    android:background="@color/white">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -20,15 +20,18 @@
             android:id="@+id/PickDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="80dp"
-            android:layout_marginLeft="30dp"
-            android:padding="5dp"
             android:layout_alignEnd="@id/arrowLeft"
             android:layout_alignBottom="@id/currentDate"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="80dp"
+            app:tint="@color/light_purple"
+            android:backgroundTint="@color/white"
+            android:minWidth="48dp"
+            android:minHeight="48dp"
+            android:padding="5dp"
             android:src="@drawable/ic_baseline_calendar_month_24"
-            android:textAllCaps="false"
-            android:backgroundTint="@color/dark_purple"/>
+            android:textAllCaps="false" />
 
         <ImageView
             android:id="@+id/arrowLeft"
@@ -42,7 +45,7 @@
             android:layout_toStartOf="@id/currentDate"
             android:padding="5dp"
             app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24"
-            app:tint="@color/light_grey" />
+            app:tint="@color/light_purple" />
 
         <TextView
             android:id="@+id/arrowLeftText"
@@ -53,7 +56,7 @@
             android:gravity="center_vertical"
             android:padding="2dp"
             android:text="Previous"
-            android:textColor="@color/white" />
+            android:textColor="@color/muted_light_purple" />
 
 
     <TextView
@@ -62,7 +65,7 @@
         android:layout_height="wrap_content"
         android:text="Today"
         android:gravity="center_horizontal"
-        android:textColor="@color/white"
+        android:textColor="@color/dark_purple"
         android:textSize="22sp"
         android:paddingVertical="5dp"
         android:paddingHorizontal="10dp"
@@ -81,7 +84,7 @@
             android:layout_toEndOf="@id/currentDate"
             android:padding="5dp"
             app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24"
-            app:tint="@color/light_grey" />
+            app:tint="@color/light_purple" />
 
         <TextView
             android:id="@+id/arrowRightText"
@@ -92,7 +95,7 @@
             android:gravity="center_vertical"
             android:padding="2dp"
             android:text="Next"
-            android:textColor="@color/white" />
+            android:textColor="@color/muted_light_purple" />
 
     </RelativeLayout>
 </FrameLayout>
