--- a/app/src/main/res/layout/keyboard_data_card.xml
+++ b/app/src/main/res/layout/keyboard_data_card.xml
@@ -3,34 +3,80 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="270dp"
+    android:layout_height="250dp"
     app:cardCornerRadius="30dp"
     app:cardPreventCornerOverlap="true"
     app:cardElevation="2dp"
+    android:outlineAmbientShadowColor="@color/cardview_shadow_end_color"
     android:clipChildren="false"
     android:layout_margin="5dp"
     android:clipToPadding="false"
     app:cardUseCompatPadding="true"
     app:cardBackgroundColor="@color/light_purple">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="20dp">
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto_black"
+            android:padding="10dp"
+            android:text="Typing stats"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:id="@+id/keyboardDataNotFound">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/home_keyboard_data_not_found_title"
+                android:textColor="@color/light_grey"
+                android:fontFamily="@font/roboto_black"
+                android:gravity="center"
+                android:textAlignment="center"
+                android:paddingVertical="8dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/home_keyboard_data_not_found_content"
+                android:textColor="@color/light_grey"
+                android:fontFamily="@font/roboto"
+                android:gravity="center"
+                android:textAlignment="center"
+                android:paddingVertical="10dp" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/dark_purple"
+                android:background="@drawable/roundstyle"
+                android:text="@string/home_keyboard_data_not_found_btn"
+                android:layout_gravity="center"
+                android:padding="5dp"
+                android:id="@+id/openAccessibilitySettingsBtn"/>
+
+        </LinearLayout>
+
+
+
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingHorizontal="20dp">
-
-        <TableRow>
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/roboto_black"
-                android:padding="10dp"
-                android:text="Typing stats"
-                android:textColor="@color/white"
-                android:textSize="22sp" />
-        </TableRow>
+        android:id="@+id/dataAvailable">
 
         <TableRow
             android:layout_width="match_parent"
@@ -41,8 +87,6 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:layout_weight="0"
                 android:text="@string/speed_avg"
                 android:textAlignment="center"
                 android:textColor="@color/light_grey"
@@ -51,11 +95,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:layout_weight="1"
                 android:text="@string/accuracy"
-                android:textAlignment="center"
-                android:layout_marginRight="20dp"
+                android:textAlignment="textEnd"
+                android:layout_marginHorizontal="30dp"
                 android:textColor="@color/light_grey"
                 android:textSize="18sp" />
         </TableRow>
@@ -83,9 +125,7 @@
                     android:id="@+id/speedData"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_column="0"
                     android:layout_toRightOf="@id/speedImage"
-                    android:layout_weight="1"
                     android:layout_alignBottom="@id/speedImage"
                     android:gravity="center"
                     android:text="1.2s"
@@ -95,6 +135,7 @@
                     android:fontFamily="@font/roboto_black"/>
 
                 <TextView
+                    android:id="@+id/textViewStats"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/speedImage"
@@ -111,9 +152,7 @@
             <RelativeLayout
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
-                android:layout_column="1"
-                android:layout_weight="1"
-                android:paddingBottom="20dp">
+                android:paddingVertical="10dp">
             <ProgressBar
                 style="?android:attr/progressBarStyleHorizontal"
                 android:id="@+id/progress_circular"
@@ -150,4 +189,5 @@
 
 
     </TableLayout>
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
