--- a/app/src/main/res/layout/sleep_data_card.xml
+++ b/app/src/main/res/layout/sleep_data_card.xml
@@ -54,7 +54,7 @@
             android:padding="10dp"
             android:text="@string/sleep_data_title"
             android:textColor="@color/white"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:id="@+id/hideThis"/>
 
     <TableLayout
@@ -214,7 +214,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="20dp"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="match_parent"
